--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "framer-motion": "^12.0.0-alpha.0",
     "gsap": "^3.12.5",
     "gsap-trial": "^3.12.5",
