--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@gsap/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "axios": "^1.7.7",
     "framer-motion": "^12.0.0-alpha.0",
     "gsap": "^3.12.5",
     "gsap-trial": "^3.12.5",
