--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^12.0.0-alpha.0",
     "gsap": "^3.12.5",
     "gsap-trial": "^3.12.5",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "next": "14.2.3",
     "react": "^18",
