Corrected some issues.

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-LOCAL_DOMAIN_URL=http://localhost:3000
-VERCEL_DOMAIN_URL=https://pang3a-lilac.vercel.app
+NEXT_LOCAL_DOMAIN_URL=http://localhost:3000
+NEXT_VERCEL_DOMAIN_URL=https://pang3a-lilac.vercel.app
