--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
 NEXT_LOCAL_DOMAIN_URL=http://localhost:3000
 NEXT_VERCEL_DOMAIN_URL=https://pang3a-lilac.vercel.app
+NEXT_VERCEL_DOMAIN_URL=https://pang3a-lilac.vercel.app
+NEXT_MONGODB_URI=mongodb+srv://mehmood:53lkLQ3ZGIea5LzD@cluster0.w0n8svt.mongodb.net/PANG3A?retryWrites=true&w=majority&appName=Cluster0
+NEXT_TOKEN_KEY=b01f49f9-cd03-4065-aeb9-2847adf6e3d0
+NEXT_SQUARE_LOCATION_ID=LC9KSAAPWHWE2
+NEXT_SQUARE_ACCESS_TOKEN=EAAAl1LNQl5Goarm04j3AoKhyvNETQNC2QGiIYb_yEO8kveKktSkzRGTKA-z7vDe
+NEXT_SQUARE_ENVIRONMENT=development
+NEXT_SQUARE_APPLICATION_ID=sandbox-sq0idb-RdKESyUVCOAr3cuddt0AKw
