--- a/package.json
+++ b/package.json
@@ -13,19 +13,25 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "framer-motion": "^12.0.0-alpha.0",
     "gsap": "^3.12.5",
     "gsap-trial": "^3.12.5",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "mongoose": "^8.6.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-loading-skeleton": "^3.4.0",
     "react-redux": "^9.1.2",
+    "react-square-web-payments-sdk": "^3.2.1",
     "sass": "^1.77.1",
-    "swiper": "^11.1.3"
+    "square": "^38.0.0",
+    "swiper": "^11.1.3",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
