--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-redux": "^9.1.2",
     "react-square-web-payments-sdk": "^3.2.1",
     "sass": "^1.77.1",
+    "sharp": "^0.33.5",
     "square": "^38.0.0",
     "swiper": "^11.1.3",
     "uuid": "^10.0.0"
